// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/kanban/kanbanHiddenColumnItem should match snapshot 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="octo-board-hidden-item"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        data-testid="menu-wrapper"
        role="button"
      >
        <span
          class="Label propColorDefault "
        >
          propOption
        </span>
      </div>
      <button
        class="Button size--small"
        style="text-decoration: none;"
        type="button"
      >
        <span>
          1
        </span>
      </button>
    </div>
  </span>
</div>
`;

exports[`src/components/kanban/kanbanHiddenColumnItem should match snapshot readonly 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="octo-board-hidden-item"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper disabled"
        data-testid="menu-wrapper"
        role="button"
      >
        <span
          class="Label propColorDefault "
        >
          propOption
        </span>
      </div>
      <button
        class="Button size--small"
        style="text-decoration: none;"
        type="button"
      >
        <span>
          1
        </span>
      </button>
    </div>
  </span>
</div>
`;
